[package]
name = "solana-exchange-program"
version = "1.8.14"
description = "Solana Exchange program"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-exchange-program"
edition = "2018"

[dependencies]
bincode = "1.3.1"
log = "0.4.11"
num-derive = { version = "0.3" }
num-traits = { version = "0.2" }
serde = "1.0.122"
serde_derive = "1.0.103"
solana-logger = { git = "https://github.com/solindex/logger.git", version = "=1.8.14" }
solana-metrics = { git = "https://github.com/solindex/metrics.git", version = "=1.8.14" }
solana-sdk = { git = "https://github.com/solindex/sdk.git", version = "=1.8.14" }
thiserror = "1.0"

[dev-dependencies]
solana-runtime = { git = "https://github.com/solindex/runtime.git", version = "=1.8.14" }

[lib]
crate-type = ["lib", "cdylib"]
name = "solana_exchange_program"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]